# tauri_app_ts_actions

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/person_logger/: mod.rs
workflows/: Action.yml
